--- a/hms-app/.eslintrc.json
+++ b/hms-app/.eslintrc.json
@@ -30,7 +30,8 @@
         "quotes": ["error", "single"],
         "no-duplicate-imports": "error",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-unused-vars": "off"
     },
     "settings": {
         "import/resolver": {
