--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -1,7 +1,10 @@
 name: Backend (HMS API) Tests
 
-on: pull_request
-    push
+on:
+  pull_request:
+  push:
+    branches:
+      - '*'
 
 defaults:
   run:
