--- a/hms-app/.eslintrc.json
+++ b/hms-app/.eslintrc.json
@@ -24,11 +24,17 @@
         "prettier"
     ],
     "rules": {
+        "indent": ["error", 2],
+        "semi": ["error", "never"],
+        "quotes": ["error", "single"],
+        "jsx-quotes": ["error", "prefer-single"],
+        // "space-in-brackets": ["error", "always"], deprecated
+        "object-curly-spacing": ["error", "always"],
+        "array-bracket-spacing": ["error", "never"],
+        "no-duplicate-imports": "error",
         "react/react-in-jsx-scope": "off",
         "camelcase": "error",
         "spaced-comment": "error",
-        "quotes": ["error", "single"],
-        "no-duplicate-imports": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-unused-vars": "off"
