fix: change incompatible eslint setting

--- a/hms-api/.eslintrc.json
+++ b/hms-api/.eslintrc.json
@@ -22,10 +22,7 @@
       "error",
       "always"
     ],
-    "indent": [
-      "error",
-      2
-    ],
+    "indent": "off",
     "semi": [
       "error",
       "always"
