--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -33,7 +33,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.56.0",
-    "typescript": "^5.0.3",
+    "typescript": "^5.0.3 || ^4",
     "web-vitals": "^3.3.0"
   },
   "scripts": {
