--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -14,6 +14,7 @@
     "@mantine/rte": "^5.10.5",
     "@microsoft/microsoft-graph-types": "^2.35.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tabler/icons-react": "^2.23.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.4.3",
