--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "short-uuid": "^4.2.2",
     "tabler-icons-react": "^1.56.0",
     "typescript": "^5.0.4 || ^4",
     "web-vitals": "^3.4.0"
